<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="restaurant_picture">restaurant picture</string>

    // Menu
    <string name="tab_map">Map View</string>
    <string name="tab_restaurant">List View</string>
    <string name="tab_workmate">Workmates</string>
    <string name="open_street_map">Open Street Map</string>

    // Navigation Drawer
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_no_username_found">User Name</string>
    <string name="info_no_email_found">Email</string>
    <string name="avatar">Avatar</string>
    <string name="navigation_drawer_logo">Logo</string>

    // Restaurant Detail
    <string name="restaurant_detail_restaurant_name">Restaurant Name</string>
    <string name="restaurant_detail_picture">Restaurant picture</string>
    <string name="restaurant_detail_description_of_the_restaurant">Description of the restaurant</string>
    <string name="restaurant_detail_valid_button">Valid button</string>
    <string name="restaurant_detail_workmate_list_avatar">Workmate_avatar</string>
    <string name="restaurant_detail_workmate_list_text">Workmate is joining!</string>
    <string name="restaurant_detail_call">CALL</string>
    <string name="restaurant_detail_like">LIKE</string>
    <string name="restaurant_detail_website">WEBSITE</string>

    // Restaurant List
    <string name="restaurant_list_name">Restaurant Name</string>
    <string name="restaurant_list_address">Address</string>
    <string name="restaurant_list_opening_time">Opening Time</string>
    <string name="restaurant_list_distance">120 m</string>
    <string name="restaurant_list_number_of_workmate">(3)</string>
    <string name="restaurant_list_sort_by_name">Sort by name</string>
    <string name="restaurant_list_sort_by_distance">Sort by distance</string>
    <string name="restaurant_list_sort_by_type">Sort by type</string>
    <string name="restaurant_list_sort_by_score">Sort by score</string>

    // Workmate List
    <string name="workmate_list_avatar">Avatar</string>
    <string name="workmate_list_text_example">WorkmateName is eating french (Restaurant Example)</string>
    <string name="workmate_list_item_text_eating">%s is eating %s ( %s )</string>
    <string name="workmate_list_item_text_not_decided">%s hasn\'t decided yet</string>
    <string name="workmate_list_item_text_joining">%s is joining!</string>

    // Search menu
    <string name="search_menu">Search menu</string>
    <string name="search_menu_restaurant">Search restaurants</string>
    <string name="search_menu_workmate">Search workmates</string>

    // Login Activity
    <string name="login_activity_restaurant_picture">Restaurant</string>
    <string name="login_activity_slogan">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="login_activity_google_button_text">Sign in with Google</string>
    <string name="login_activity_facebook_button_text">Sign in with Facebook</string>
    <string name="login_activity_logo">Logo</string>

    // Notification
    <string name="notification_message">%s, %s %s</string>
    <string name="notification_workmates">with %s.</string>

    // Settings menu
    <string name="dialog_fragment_setting_title">SETTINGS</string>
    <string name="dialog_fragment_settings_notification">Restaurant notification</string>
    <string name="dialog_fragment_settings_ok_button">OK</string>

</resources>