<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restaurant_list_sort_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_list_sort_by_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restaurant_list_sort_by_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_list_sort_by_distance" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restaurant_list_sort_by_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_list_sort_by_type" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restaurant_list_sort_by_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_list_sort_by_rate" />

</LinearLayout>