<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_fragment_settings_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:text="@string/dialog_fragment_setting_title"
        android:textColor="@color/text_menu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_fragment_settings_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dialog_fragment_settings_notification"
        app:layout_constraintBottom_toTopOf="@id/dialog_fragment_settings_ok_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_fragment_settings_title" />

    <CheckBox
        android:id="@+id/dialog_fragment_settings_notification_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/dialog_fragment_settings_notification"
        app:layout_constraintLeft_toRightOf="@id/dialog_fragment_settings_notification"
        app:layout_constraintTop_toTopOf="@id/dialog_fragment_settings_notification" />

    <TextView
        android:id="@+id/dialog_fragment_settings_ok_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:text="@string/dialog_fragment_settings_ok_button"
        android:textColor="@color/text_menu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>