<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restaurant_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_restaurant_detail_picture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/activity_restaurant_detail_frame_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_restaurant_detail_valid_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/restaurant_detail_valid_button"
        android:src="@drawable/icon_restaurant_detail_valid_24"
        app:backgroundTint="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="@id/activity_restaurant_detail_name"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/activity_restaurant_detail_frame_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/design_default_color_primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_picture" />

    <TextView
        android:id="@+id/activity_restaurant_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/restaurant_detail_restaurant_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_picture" />

    <TextView
        android:id="@+id/activity_restaurant_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/restaurant_detail_description_of_the_restaurant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_frame_2"
        app:layout_constraintBottom_toTopOf="@id/detail_restaurant_recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/detail_restaurant_call_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/detail_restaurant_like_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/detail_restaurant_website_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <ImageView
        android:id="@+id/detail_restaurant_call_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_detail_restaurant_call_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_frame_2" />

    <ImageView
        android:id="@+id/detail_restaurant_like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_detail_restaurant_like_24"
        app:layout_constraintLeft_toRightOf="@id/detail_restaurant_call_icon"
        app:layout_constraintRight_toLeftOf="@id/detail_restaurant_website_icon"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_frame_2" />

    <ImageView
        android:id="@+id/detail_restaurant_website_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/icon_detail_restaurant_website_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_restaurant_detail_frame_2" />

    <TextView
        android:id="@+id/detail_restaurant_call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_detail_call"
        app:layout_constraintLeft_toLeftOf="@id/detail_restaurant_call_icon"
        app:layout_constraintRight_toRightOf="@id/detail_restaurant_call_icon"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_call_icon" />

    <TextView
        android:id="@+id/detail_restaurant_like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_detail_like"
        app:layout_constraintEnd_toEndOf="@id/detail_restaurant_like_icon"
        app:layout_constraintStart_toStartOf="@id/detail_restaurant_like_icon"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_like_icon" />

    <TextView
        android:id="@+id/detail_restaurant_website_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_detail_website"
        app:layout_constraintEnd_toEndOf="@+id/detail_restaurant_website_icon"
        app:layout_constraintStart_toStartOf="@+id/detail_restaurant_website_icon"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_website_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_restaurant_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/item_detail_restaurant_workmate" />

</androidx.constraintlayout.widget.ConstraintLayout>