<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:paddingStart="5dp"
    android:paddingEnd="0dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/restaurant_name"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="2dp"
        android:text="@string/restaurant_list_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_address"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="2dp"
        android:text="@string/restaurant_list_address"
        app:layout_constraintBottom_toTopOf="@id/restaurant_opening_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name" />

    <TextView
        android:id="@+id/restaurant_opening_time"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="2dp"
        android:text="@string/restaurant_list_opening_time"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_address" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/icon_restaurant_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_distance"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/restaurant_list_distance"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_number_of_workmate"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/restaurant_list_number_of_workmate"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_workmate_image"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_workmate_image"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/icon_restaurant_workmate_24"
        app:layout_constraintRight_toLeftOf="@id/restaurant_number_of_workmate"
        app:layout_constraintTop_toBottomOf="@id/restaurant_distance" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_1_background"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icon_restaurant_star_24"
        app:layout_constraintRight_toLeftOf="@id/restaurant_image"
        app:layout_constraintTop_toBottomOf="@id/restaurant_workmate_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_1_center"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/icon_restaurant_star_23_center"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_star_1_background"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_star_1_background"
        app:layout_constraintRight_toRightOf="@id/restaurant_star_1_background"
        app:layout_constraintTop_toTopOf="@id/restaurant_star_1_background" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_2_background"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icon_restaurant_star_24"
        app:layout_constraintRight_toLeftOf="@id/restaurant_star_1_background"
        app:layout_constraintTop_toBottomOf="@id/restaurant_workmate_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_2_center"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/icon_restaurant_star_23_center"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_star_2_background"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_star_2_background"
        app:layout_constraintRight_toRightOf="@id/restaurant_star_2_background"
        app:layout_constraintTop_toTopOf="@id/restaurant_star_2_background" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_3_background"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icon_restaurant_star_24"
        app:layout_constraintRight_toLeftOf="@id/restaurant_star_2_background"
        app:layout_constraintTop_toBottomOf="@id/restaurant_workmate_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_star_3_center"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/icon_restaurant_star_23_center"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_star_3_background"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_star_3_background"
        app:layout_constraintRight_toRightOf="@id/restaurant_star_3_background"
        app:layout_constraintTop_toTopOf="@id/restaurant_star_3_background" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/restaurant_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="restaurant_star_1_background,restaurant_star_1_center" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/restaurant_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="restaurant_star_2_background,restaurant_star_2_center" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/restaurant_star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="restaurant_star_3_background,restaurant_star_3_center" />

</androidx.constraintlayout.widget.ConstraintLayout>